# trellis2-mlx

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  PHASE0_SPEC.md  PHASES.md  README.md  pyproject.toml
docs/: open-questions-resolved.md  weight-inventory.json  weight-inventory.md
examples/: decode_random_latent.py  image_to_3d.py  image_to_3d_lowpoly.py
examples/workflows/: README.md  _common.py  advanced.py  advanced_custom_steps.py  advanced_custom_steps_mesh_only.py  better_texture.py  high_quality.py  low_poly.py  max_quality.py  mesh_refiner.py  multi_views.py  multi_views_mesh_only.py  multi_views_texture_mesh.py  only_mesh_advanced.py  only_mesh_simple.py  projection_6views_hy20.py  projection_multiview_hy20_qwen_2views.py  projection_multiview_hy20_qwen_2views_lowpoly.py  projection_multiview_hy20_qwen_2views_lowpoly_full.py  projection_multiview_hy20_qwen_2views_lowpoly_full_fast.py  projection_multiview_hy20_qwen_2views_upscaled.py  projection_multiview_hy20_qwen_4views.py  projection_multiview_hy20_qwen_4views_upscaled.py  projection_multiview_with_hunyuan3d.py  recon_via_gen.py  recon_via_gen_video.py  refine_mesh.py  refine_mesh_mesh_only.py  simple.py  texture_mesh.py  using_qwen_rembg.py  watertight_mesh.py  watertight_no_holes.py
trellis2_mlx/: __init__.py  pipeline.py
trellis2_mlx/metal/: __init__.py  ops.py
trellis2_mlx/metal/kernels/: mesh_extract.metal  neighbor_build.metal  prefix_sum.metal  sparse_attn_bwd.metal  sparse_attn_fwd.metal  sparse_conv_bwd.metal  sparse_conv_fwd.metal  trilinear_bake.metal
trellis2_mlx/models/: __init__.py  dinov3.py  dit.py  vae.py
trellis2_mlx/nn/: __init__.py  adaln.py  dit_block.py  res_ae.py  rope.py  sparse_attn.py  sparse_blocks.py  sparse_conv.py
trellis2_mlx/ovoxel/: __init__.py  data.py  material_bake.py  mesh_extract.py  postprocess.py  repair.py  uv_atlas.py
trellis2_mlx/samplers/: __init__.py  rectified_flow.py
trellis2_mlx/tests/: __init__.py  test_dinov3.py  test_dinov3_hf_weights.py  test_dit_block.py  test_material_decoder.py  test_mesh_extract.py  test_ovoxel.py  test_rectified_flow.py  test_shape_decoder.py  test_slat_dit.py  test_sparse_blocks.py  test_sparse_conv.py  test_ss_decoder.py  test_ss_dit.py
trellis2_mlx/utils/: __init__.py  preprocess.py  weight_convert.py
